# emeditor-terminal

./: .editorconfig  .env.example  .geminiignore  .gitignore  .output.txt  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  emeditor-terminal.rc  install.ps1  package.json  pnpm-lock.yaml
.agents/skills/creating-github-issues/: SKILL.md
.aiassistant/rules/: authoring-skills-best-practice.md  use GitHub API.md
.codex/: config.toml
.codex/agents/: track-janitor.toml
.codex/rules/: workspace.rules
.gemini/: settings.json
.gemini/agents/: architecture-auditor.md  conductor-janitor.md  create-draft-pr.md
.gemini/commands/: previously-on-project.toml  review-the-current-branch.toml
.gemini/hooks/: init_memory.py  mempal_precompact_hook.py  mempal_save_hook.py  restrict_git_add_all.py  suggest_conductor_skill.py  validate_architecture.py
.gemini/policies/: workspace-rules.toml
.github/workflows/: build.yml  danger.yml  release.yml
.junie/mcp/: mcp.json
conductor/: 132_system_caret_sync_20260403.md  git.md  github_issue.md  index.md  plan-132.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: architecture_rules.md  rust_win32.md
docs/: INSTALL.md
src/: conpty.rs  custom_bar.rs  dialog.rs  editor.rs  lib.rs  session.rs  terminal.rs
src/application/: config_workflow.rs  mod.rs  service.rs  terminal_workflow.rs
src/domain/: input.rs  mod.rs  parser.rs  terminal.rs
src/gui/: custom_bar.rs  ime.rs  mod.rs  renderer.rs  scroll.rs  terminal_data.rs  window.rs
src/infra/: conpty.rs  editor.rs  input.rs  mod.rs
(+406 files in other folders)
