[package]
name = "terminal-for-emeditor"
version = "0.6.0"
edition = "2021"

[lib]
name = "emeditor_terminal"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
simplelog = "0.12"
vte = "0.15.0"
unicode-segmentation = "1.11"
unicode-width = "0.1.13"
which = "8.0"
time = { version = "0.3", features = ["macros"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Globalization",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_UI_Input_Ime",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_System_Registry",
] }
windows-core = "0.62"
windows-registry = "0.6"
windows-result = "0.4"
windows-strings = "0.5"

[build-dependencies]
embed-resource = "2.5"
windows-link = "0.2"
